Co-authored-by: CamHung1609 <CamHung1609@users.noreply.github.com> Co-authored-by: minhluan0302 <minhluan0302@users.noreply.github.com> Co-authored-by: Bich Phuong <bp21thg7@users.noreply.github.com>

--- a/public/assets/css/admin/danhmuc.css
+++ b/public/assets/css/admin/danhmuc.css
@@ -72,6 +72,10 @@
     justify-content: space-around;
 }
 
+.hidden-field h4 {
+    font-size: 30px;
+}
+
 .tableDM-container table {
     width: 100%;
 }
