Co-authored-by: Bich Phuong <bp21thg7@users.noreply.github.com> Co-authored-by: CamHung1609 <CamHung1609@users.noreply.github.com> Co-authored-by: minhluan0302 <minhluan0302@users.noreply.github.com>

--- a/public/assets/css/admin/sanpham.css
+++ b/public/assets/css/admin/sanpham.css
@@ -11,6 +11,7 @@ a {
   border: 1px solid black;
   box-shadow: 7px 7px 7px gray;
   border-radius: 4px;
+  background-color: whitesmoke;
 }
 
 .Product-list-form {
