--- a/public/assets/css/admin/chitietsanpham.css
+++ b/public/assets/css/admin/chitietsanpham.css
@@ -17,6 +17,10 @@ header {
 .title-box a {
     font-size: 1.5rem;
     text-decoration: none;
+    border: 1px solid black;
+    box-shadow: 7px 7px 7px gray;
+    border-radius: 4px;
+    background-color: whitesmoke;
 }
 
 *:disabled {
