--- a/public/assets/css/admin/sanpham.css
+++ b/public/assets/css/admin/sanpham.css
@@ -4,7 +4,7 @@ a {
 
 .add-product {
   padding: 1.1% 0%;
-  font-size: 1.2rem;
+  font-size: 1.1rem;
 }
 
 .add-product a {
@@ -42,7 +42,7 @@ a {
 
 .table-box {
   width: 100%;
-  font-size: 24px;
+  font-size: 23px;
   border-collapse: collapse;
   border: 1px solid black;
 }
@@ -56,7 +56,7 @@ a {
 }
 
 .table-box td {
-  margin: 1% 0;
+  padding: 0.35% 0;
 }
 
 .table-box th:nth-child(1) {
